--- a/pages/pic8.html
+++ b/pages/pic8.html
@@ -50,7 +50,7 @@
     .cropped-image {
       display: block;
       max-width: 100%;
-      height: 800;
+      height: auto;
       position: absolute;
       top: 50%;
       left: 50%;
@@ -61,7 +61,7 @@
 
     .modal-body img {
       max-width: 100%;
-      height: 800;
+      height: auto;
     }
 
     /* 添加下面的样式 */
@@ -77,7 +77,6 @@
     }
   </style>
 </head>
-
 <body>
 <div class="container mt-5">
   <div class="container mt-5">
@@ -108,7 +107,7 @@
         data.images.forEach(pic => {
           var img = document.createElement('img');
           img.src = pic.url;
-          img.alt = pic.name;
+          img.alt = pic.name.split('.')[0];
           img.width = 100;
 
           htmlContent += `
@@ -120,7 +119,7 @@
                                         ...
                                     </button>
                                     <div class="dropdown-menu dropdown-menu-right">
-                                        <a class="dropdown-item delete-image" href="#" data-filename="${img.alt}">删除</a>
+                                        <a class="dropdown-item delete-image" href="#" data-filename="${pic.name}">删除</a>
                                     </div>
                                 </div>
                                 <div class="cropped-image-container">
