--- a/pages/pic8.html
+++ b/pages/pic8.html
@@ -149,30 +149,45 @@
     // 点击“删除”操作
     $(document).on('click', '.delete-image', function (e) {
       e.preventDefault();
+      e.stopPropagation(); // 阻止事件冒泡
       const filename = $(this).data('filename');
+      console.log(filename)
       // 如果删除成功，移除对应的容器
       $(`[data-target="#imageModal${filename}"]`).parent().remove();
 
       // 创建一个FormData对象，用于发送POST请求
       var formData = new FormData();
       formData.append('image_name', filename);
-
+      console.log(formData)
       // 发送POST请求到服务器，请求删除图片
       fetch('http://127.0.0.1:8000/delete/', {
         method: 'POST',
         body: formData,
       })
-        .then(response => response.json())
+        .then(response => {
+          if (!response.ok) {
+            // 如果响应状态不是成功的，抛出错误
+            return response.json().then(json => Promise.reject(json));
+          }
+          // 响应状态是成功的，解析JSON
+          return response.json();
+        })
         .then(data => {
-          if (response.ok) {
+          console.log(data)
+          if (data.result == 'success') {
             // 如果服务器返回了成功的响应，那么删除图片容器
-            imageContainer.remove();
+           // imageContainer.remove();
+            //let splitElement = filename.split('.')[0];
+            //$(`[data-target="#imageModal${splitElement}"]`).remove();
+            //刷新页面
+            location.reload();
           } else {
             // 如果服务器返回了错误的响应，那么显示错误消息
             alert(data.message);
           }
         })
         .catch(error => console.error('Error:', error));
+
 
       // $.ajax({
       //   url: "/delete",
@@ -188,62 +203,9 @@
       // });
     });
     // 将生成的HTML内容添加到页面中
-    $('#imageGrid').html(htmlContent);
+    //$('#imageGrid').html(htmlContent);
   })
 
-  document.getElementById('showGallery').addEventListener('click', function () {
-    fetch('http://127.0.0.1:8000/database/')
-      .then(response => response.json())
-      .then(data => {
-        //var gallery = document.getElementById('gallery');
-        //gallery.innerHTML = '';
-
-        let htmlContent = '';
-        // 假设响应数据的格式为 { pics: [{ filename: "...", url: "..." }, ...] }
-
-        data.images.forEach(pic => {
-          var img = document.createElement('img');
-          img.src = pic.url;
-          img.alt = pic.name;
-          img.width = 100;
-
-          htmlContent += `
-                        <div class="col-2 p-0">
-                            <div class="image-box" data-toggle="modal" data-target="#imageModal${img.alt}">
-                                <!-- 省略号按钮和下拉菜单 -->
-                                <div class="dropdown">
-                                    <button type="button" class="btn btn-link dropdown-toggle p-1" data-toggle="dropdown">
-                                        ...
-                                    </button>
-                                    <div class="dropdown-menu dropdown-menu-right">
-                                        <a class="dropdown-item delete-image" href="#" data-filename="${img.alt}">删除</a>
-                                    </div>
-                                </div>
-                                <div class="filename">${img.alt}</div>
-                                <div class="cropped-image-container">
-                                    <img src="${img.src}" alt="Image" class="cropped-image">
-                                </div>
-                            </div>
-                            <div class="modal fade" id="imageModal${img.alt}" tabindex="-1" role="dialog" aria-hidden="true">
-                                <div class="modal-dialog modal-lg">
-                                    <div class="modal-content">
-                                        <div class="modal-body">
-                                            <img src="${img.src}" alt="Image">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    `;
-
-          //gallery.appendChild(img);
-        });
-
-        // 将生成的HTML内容添加到页面中
-        $('#imageGrid').html(htmlContent);
-      })
-      .catch(error => console.error('Error:', error));
-  });
 </script>
 </body>
 
